# SSCT-OpenGL-GFLW

./: .gitignore  CMakeLists.txt  CMakePresets.json
androidStudioApplication/: settings.gradle.kts
androidStudioApplication/app/: build.gradle.kts
androidStudioApplication/app/src/androidTest/java/com/example/androidstudioapplication/: ExampleInstrumentedTest.java
androidStudioApplication/app/src/main/: AndroidManifest.xml
androidStudioApplication/app/src/main/java/com/example/androidstudioapplication/: MainActivity.java
androidStudioApplication/app/src/main/res/layout/: activity_main.xml
androidStudioApplication/app/src/main/res/values/: strings.xml  themes.xml
androidStudioApplication/app/src/main/res/values-night/: themes.xml
androidStudioApplication/app/src/test/java/com/example/androidstudioapplication/: ExampleUnitTest.java
androidStudioApplication/gradle/wrapper/: gradle-wrapper.properties
androidStudioProject/app/: build.gradle.kts
androidStudioProject/gradle/wrapper/: gradle-wrapper.properties
include/: application.hpp  input.hpp  log.hpp  renderer.hpp
source/: application.cpp  input.cpp  main.cpp  renderer.cpp
